# edgeware_smart_contracts

./: .gitignore  Cargo.toml  build.sh  lib.rs
erc20token/: Cargo.toml  lib.rs
rust-ed25519-compact/: Cargo.toml
tests/: .env  bridge.test.js  package.json
